// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Internal|Debate.viewerDidAuthor bool fetches if viewer is the argument author 1`] = `
Object {
  "node": Object {
    "viewerDidAuthor": false,
  },
}
`;

exports[`Internal|Debate.viewerDidAuthor bool fetches if viewer is the argument author 2`] = `
Object {
  "node": Object {
    "viewerDidAuthor": true,
  },
}
`;
